Format property name on frontend and fix toast wrapping issue

--- a/app/toaster/Toast/Toast.css
+++ b/app/toaster/Toast/Toast.css
@@ -1,6 +1,7 @@
 @import '../../core/variables';
 
 .root {
+  flex-wrap: nowrap;
   margin: var(--pad-sm) var(--pad-lg);
   background-color: var(--color-green);
   box-shadow: var(--shadow-lg);
@@ -26,22 +27,29 @@
   background-color: var(--color-blue);
 }
 
-.message > span {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 0.125em;
+.message {
+  line-height: 1.5;
 
-  &:first-child {
-    margin-left: 0;
-  }
+  & > span {
+    vertical-align: middle;
+    margin: 0 0.25em;
 
-  &:last-child {
-    margin-right: 0;
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
-.buttons button {
-  text-transform: uppercase;
+.buttons {
+  flex-wrap: nowrap;
+
+  button {
+    text-transform: uppercase;
+  }
 }
 
 .dismiss {
